[gd_scene load_steps=2 format=3 uid="uid://c8m4n7p2q5rxs"]

[ext_resource type="Script" path="res://scripts/ui/BattleResultsScreen.gd" id="1_script"]

[node name="BattleResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultsPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/ResultsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ResultsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResultLabel" type="Label" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "VICTORY!"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You defeated your opponent!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Battle Statistics"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MenuButton" type="Button" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Main Menu"

[node name="RematchButton" type="Button" parent="CenterContainer/ResultsPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Rematch"
